Fix: service onEnterBack, onComplete 메서드 추가 / footer office 쪽 css 수정(margin -> gap)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -698,11 +698,12 @@ button {
 }
 .footer__list--office .footer__item {
   display: flex;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
   white-space: nowrap;
 }
 .clock {
   display: flex;
-  margin-left: 5px;
 }
 .clock__colon {
   animation: blink 1s step-start infinite;
